# mini_db

./: CMakeLists.txt  Makefile  README.md
src/: database.h  main.cpp  table.h
src/parser/: ast.h  parser.h
